Fix alignment of bookmarks description

--- a/src/main/frontend/src/app/bookmark/element/bookmark.component.less
+++ b/src/main/frontend/src/app/bookmark/element/bookmark.component.less
@@ -51,6 +51,7 @@
 
 .description-well {
 	margin-top: 10px;
+	margin-right: 10px;
 	margin-left: 10px;
 }
 
